package Ejercicio_06;

public class Entrada {
    private int numero;

    public Entrada(int numero) {
        this.numero = numero;
    }

    public int getNumero() { return numero; }
}