package Ejercicio_06;

public class Guarda extends RolPersonal {
    private Area areaAsignada;
    private Vehiculo vehiculo;

    public Guarda(Area areaAsignada, Vehiculo vehiculo) {
        this.areaAsignada = areaAsignada;
        this.vehiculo = vehiculo;
    }
}