package Ejercicio_06;

public abstract class RolPersonal {
    // Clase padre vacía para agrupar los distintos cargos que puede tener un empleado
}