package Ejercicio_06;

public enum TipoAlimentacion {
    HERBIVORO,
    CARNIVORO,
    OMNIVORO
}