package Ejercicio_06;

public class Vehiculo {
    private String matricula;
    private String tipo;

    public Vehiculo(String matricula, String tipo) {
        this.matricula = matricula;
        this.tipo = tipo;
    }
}